--- a/char-code/python_char_code_problems.ipynb
+++ b/char-code/python_char_code_problems.ipynb
@@ -9,6 +9,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "积累对于python中和字符编码相关问题的疑难杂症及解决方案。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -596,7 +603,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -617,15 +624,6 @@
     "plt.plot(x,y)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
