--- a/libs/pyinstaller/handout.ipynb
+++ b/libs/pyinstaller/handout.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "pyinstaller是一个很好用的python打包工具，在Windows环境下可以将多个python脚本打包成一个exe可执行文件，而脚本中所依赖的各种第三方库在打包时候都会被统一处理到一起，这样打包成的exe文件就可以在没有安装这些库的电脑上执行，甚至也可以在没有安装任何python环境的电脑上执行。"
+    "pyinstaller是一个很好用的python打包工具，在Windows环境下可以将python脚本打包成一个exe可执行文件，并且脚本中所依赖的各种第三方库在打包时候都会被统一处理到一起，这样打包成的exe文件就可以在没有安装这些库的电脑上执行，甚至也可以在没有安装任何python环境的电脑上执行。"
    ]
   },
   {
@@ -74,14 +74,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* -w：Windows程序，不显示命令行窗口"
+    "* -w：Windows程序，不显示命令行窗口，但是如果程序有命令行输入或输出，不要带此项参数！"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* -i：后面跟图标文件路径"
+    "* -i：后面跟图标文件路径，一定要是ico格式的文件，如果不是可以用格式工厂等软件先转换一下"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "当前目录下有一个名为argtest.py的脚本文件（内容如下），还有一个arg.png的图片文件。"
+    "当前目录下有一个名为argtest.py的脚本文件（内容如下），还有一个icon.ico的图片文件。"
    ]
   },
   {
@@ -171,7 +171,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在命令行当前目录下执行命令：``"
+    "在命令行当前目录下执行命令：`pyinstaller -F -i icon.ico argtest.py`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "执行完之后，发现在当前目录下生成了两个新目录：build、dist以及一个文件：argtest.spec，build目录和argtest.spec都是pyinstaller在打包过程中产生的中间文件，而dist目录中则可以看到生成了一个名为argtest.exe的可执行文件，并且图标为icon.ico的图片。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在当前命令行中先cd到dist目录下，然后执行：`argtest.exe -h`，可以看到："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "再执行：`argtest.exe 000 -a1 111 -a3 2`，可以看到："
    ]
   }
  ],
