--- a/database/mysql/quickstart.ipynb
+++ b/database/mysql/quickstart.ipynb
@@ -267,6 +267,305 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "* 在命令行中登录mysql（假如用户名/密码是：root/root）：`mysql -uroot -proot`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以下命令都是在登录mysql后的mysql命令行中执行的："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 查看当前有哪些数据库：`show databases;`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 创建一个新的名为info的数据库：`create database info;`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 切换到info数据库：`use info;`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 创建一个表person：`create table person(id int not null auto_increment primary key,name varchar(32),age int);`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 查看当前有哪些表：`show tables;`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 往person表中插入一些数据："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "insert into person(name,age) values('Tom',18);\n",
+    "insert into person(name,age) values('John',23);\n",
+    "insert into person(name,age) values('Amy',15);\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 查询person表：`select * from person;`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "mysql> select * from person;\n",
+    "+----+------+------+\n",
+    "| id | name | age  |\n",
+    "+----+------+------+\n",
+    "|  1 | Tom  |   18 |\n",
+    "|  2 | John |   23 |\n",
+    "|  3 | Amy  |   15 |\n",
+    "+----+------+------+\n",
+    "3 rows in set (0.00 sec)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 用python操作数据库"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 连接mysql"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "导入包："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import MySQLdb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "获取数据库连接对象："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "conn = MySQLdb.connect(user = 'root',passwd = 'root',host = '127.0.0.1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注：MySQLdb.connect()函数可以接收的常用的几个参数："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* host：连接的服务器主机名，默认为本机（localhost）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* user：数据库用户名，默认为当前用户"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* passwd：用户登录密码，无默认值"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* db：连接的数据库名，无默认值"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* read_default_file：使用指定的mysql配置文件"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* port：连接端口，默认为3306"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* connect_timeout：连接超时时间，单位为秒"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "获取游标（相当于一个指针）："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "设置当前数据库："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.select_db('info')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注：不建议在python中操作数据库创建表。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 执行sql语句插入数据"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "假如向person表中插入数据："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sql = 'insert into person(name,age) values(\"Zhangsan\",34)'  # 组装sql\n",
+    "cur.execute(sql)  # 执行sql\n",
+    "conn.commit()  # 提交，如果没有这句，更改不会生效\n",
+    "cur.close()\n",
+    "conn.close()  # 用完之后最好关闭游标和连接对象"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "此时去mysql中，进入info数据库，查询：`select * from person;`，结果如下："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "mysql> select * from person;\n",
+    "+----+----------+------+\n",
+    "| id | name     | age  |\n",
+    "+----+----------+------+\n",
+    "|  1 | Tom      |   18 |\n",
+    "|  2 | John     |   23 |\n",
+    "|  3 | Amy      |   15 |\n",
+    "|  4 | Zhangsan |   34 |\n",
+    "+----+----------+------+\n",
+    "4 rows in set (0.00 sec)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "发现成功插入一条数据。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
