modify mysql-python quickstart

--- a/database/mysql/quickstart.ipynb
+++ b/database/mysql/quickstart.ipynb
@@ -382,8 +382,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import MySQLdb"
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -485,13 +487,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "设置当前数据库："
+    "设置当前数据库为info："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "conn.select_db('info')"
@@ -566,13 +570,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 批量插入数据"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "使用占位符和列表："
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sql = 'insert into person(name,age) values(%s,%s)'\n",
+    "cur.execute(sql,('Lisi',23))  # 插入一条数据\n",
+    "persons = [('Wangwu',32),('Zhaoliu',12),('Tianqi',45)]\n",
+    "cur.executemany(sql,persons)  # 插入多条\n",
+    "conn.commit()  # 提交"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "此时去mysql中，进入info数据库，查询：`select * from person;`，结果如下："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "mysql> select * from person;\n",
+    "+----+----------+------+\n",
+    "| id | name     | age  |\n",
+    "+----+----------+------+\n",
+    "|  1 | Tom      |   18 |\n",
+    "|  2 | John     |   23 |\n",
+    "|  3 | Amy      |   15 |\n",
+    "|  4 | Zhangsan |   34 |\n",
+    "|  5 | Lisi     |   23 |\n",
+    "|  6 | Wangwu   |   32 |\n",
+    "|  7 | Zhaoliu  |   12 |\n",
+    "|  8 | Tianqi   |   45 |\n",
+    "+----+----------+------+\n",
+    "8 rows in set (0.07 sec)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 删除数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sql = 'delete from person where name = \"Tianqi\"'\n",
+    "cur.execute(sql)\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "mysql> select * from person;\n",
+    "+----+----------+------+\n",
+    "| id | name     | age  |\n",
+    "+----+----------+------+\n",
+    "|  1 | Tom      |   18 |\n",
+    "|  2 | John     |   23 |\n",
+    "|  3 | Amy      |   15 |\n",
+    "|  4 | Zhangsan |   34 |\n",
+    "|  5 | Lisi     |   23 |\n",
+    "|  6 | Wangwu   |   32 |\n",
+    "|  7 | Zhaoliu  |   12 |\n",
+    "+----+----------+------+\n",
+    "7 rows in set (0.00 sec)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 更新数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sql = 'update person set age = 88 where name = \"Zhaoliu\"'\n",
+    "cur.execute(sql)\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "mysql> select * from person;\n",
+    "+----+----------+------+\n",
+    "| id | name     | age  |\n",
+    "+----+----------+------+\n",
+    "|  1 | Tom      |   18 |\n",
+    "|  2 | John     |   23 |\n",
+    "|  3 | Amy      |   15 |\n",
+    "|  4 | Zhangsan |   34 |\n",
+    "|  5 | Lisi     |   23 |\n",
+    "|  6 | Wangwu   |   32 |\n",
+    "|  7 | Zhaoliu  |   88 |\n",
+    "+----+----------+------+\n",
+    "7 rows in set (0.00 sec)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 查询数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "【Output 1】\n",
+      "((1L, 'Tom', 18L), (2L, 'John', 23L), (3L, 'Amy', 15L), (4L, 'Zhangsan', 34L), (5L, 'Lisi', 23L), (6L, 'Wangwu', 32L), (7L, 'Zhaoliu', 88L))\n",
+      "【Output 2】\n",
+      "((1L, 'Tom', 18L), (2L, 'John', 23L), (3L, 'Amy', 15L))\n",
+      "【Output 3】\n",
+      "(1L, 'Tom', 18L)\n",
+      "(2L, 'John', 23L)\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql = 'select * from person'\n",
+    "cur.execute(sql)\n",
+    "# 取查到的所有结果，并把游标移到结尾\n",
+    "print '【Output 1】'\n",
+    "print cur.fetchall()\n",
+    "\n",
+    "# 把游标移到开头\n",
+    "cur.scroll(0,'absolute')\n",
+    "\n",
+    "# 取查到的前n条数据，并把游标移到第n+1位置\n",
+    "print '【Output 2】'\n",
+    "print cur.fetchmany(3)\n",
+    "\n",
+    "# 把游标移到开头\n",
+    "cur.scroll(0,'absolute')\n",
+    "\n",
+    "# 取查到的一条数据，并把游标向后移动一位\n",
+    "print '【Output 3】'\n",
+    "print cur.fetchone()\n",
+    "print cur.fetchone()"
+   ]
   }
  ],
  "metadata": {
