add usage of zip

--- a/useful-func/func-handout.ipynb
+++ b/useful-func/func-handout.ipynb
@@ -118,6 +118,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# zip函数的用法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Docstring:\n",
+    "zip(seq1 [, seq2 [...]]) -> [(seq1[0], seq2[0] ...), (...)]\n",
+    "Return a list of tuples, where each tuple contains the i-th element\n",
+    "from each of the argument sequences.  The returned list is truncated\n",
+    "in length to the length of the shortest argument sequence.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "先来看看zip函数的文档，从文档中可以看出，zip函数接收1个或多个序列作为参数，返回一个由元组组成的列表。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "结果列表的第i个元素是seq1~seqn的第i个元素组成的元组。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "结果列表的长度等于seq1~seqn中最短的序列的长度。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "一段测试代码如下："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "# coding:utf-8\n",
+    "\n",
+    "def main():\n",
+    "    a = '1234'\n",
+    "    b = [4,6,7]\n",
+    "\n",
+    "    print zip()\n",
+    "    # 输出：[]\n",
+    "\n",
+    "    print zip(a)\n",
+    "    # 输出：[('1',), ('2',), ('3',), ('4',)]\n",
+    "\n",
+    "    print zip(a,a)\n",
+    "    # 输出：[('1', '1'), ('2', '2'), ('3', '3'), ('4', '4')]\n",
+    "\n",
+    "    print zip(a,[])\n",
+    "    # 输出：[]\n",
+    "\n",
+    "    print zip(a,b)\n",
+    "    # 输出：[('1', 4), ('2', 6), ('3', 7)]\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# map函数的用法"
    ]
   },
@@ -149,6 +228,13 @@
    "metadata": {},
    "source": [
     "从map函数的文档中可以看出，该函数的第一个参数为一个函数对象，后面可以跟一个或多个序列，函数的返回值是一个list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "对比zip函数的用法，可以发现其实map函数就是一个增强版的zip函数，与zip函数不同的是，map函数支持传入一个函数参数来处理序列。"
    ]
   },
   {
