add base64 usage

--- a/useful-func/func-handout.ipynb
+++ b/useful-func/func-handout.ipynb
@@ -291,6 +291,38 @@
     "    main()\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# base64编解码"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "# coding:utf-8\n",
+    "# 测试base64编解码\n",
+    "import base64\n",
+    "\n",
+    "def main():\n",
+    "    s = '123abc'\n",
+    "\n",
+    "    # 编码\n",
+    "    print base64.b64encode(s)\n",
+    "    # 输出：MTIzYWJj\n",
+    "\n",
+    "    # 解码\n",
+    "    print base64.b64decode('MTIzYWJj')\n",
+    "    # 输出：123abc\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
