--- a/useful-func/python-tricks.ipynb
+++ b/useful-func/python-tricks.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "这里巧妙地利用了Python会把False当做序列下表0、把True当做序列下标1的特性，把否定条件的输出放在前面的元组的第一个元素，而把肯定条件的输出放在第二个元素。又比如："
+    "这里巧妙地利用了Python会把False当做序列下标0、把True当做序列下标1的特性，把否定条件的输出放在前面的元组的第一个元素，而把肯定条件的输出放在第二个元素。又比如："
    ]
   },
   {
@@ -180,7 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "但是结果又让我们诧异了，这是因为元组是不可变对象，在内存中同一个元组只会存在一个，再怎么深度拷贝也没用。"
+    "但是结果又让我们诧异了，这是因为元组是不可变对象，在内存中同一个元组只会存在一个，再怎么深度拷贝也没用（同为不可变对象的字符串也是同理的）。"
    ]
   },
   {
@@ -329,6 +329,57 @@
    "metadata": {},
    "source": [
     "见过列表推导式、生成器推导式，那么有没有见过字典推导式呢？上面就是一例。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 快速反转字符串"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "654321\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = '123456'\n",
+    "print s[::-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 优雅地打开文件"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open('test.txt','r') as f:\n",
+    "    content = f.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "用with语句上下文管理器可以自动地管理文件的打开、关闭，不需手工干预。"
    ]
   }
  ],
