add usage of reduce

--- a/useful-func/func-handout.ipynb
+++ b/useful-func/func-handout.ipynb
@@ -296,6 +296,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# reduce函数的用法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "先看函数文档："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Docstring:\n",
+    "reduce(function, sequence[, initial]) -> value\n",
+    "Apply a function of two arguments cumulatively to the items of a sequence,\n",
+    "from left to right, so as to reduce the sequence to a single value.\n",
+    "For example, reduce(lambda x, y: x+y, [1, 2, 3, 4, 5]) calculates\n",
+    "((((1+2)+3)+4)+5).  If initial is present, it is placed before the items\n",
+    "of the sequence in the calculation, and serves as a default when the\n",
+    "sequence is empty.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "reduce函数接收三个参数：function，seq，init，其中前两个是必选参数，最后一个为可选参数。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "reduce函数做了这样一件事情：从左到右遍历seq，将seq[0]和seq[1]传入函数function进行运算（function为一个接收两个参数的函数），得到一个结果值，然后将这个结果值再和seq[2]传入fucntion进行运算再得到一个新的结果值...以此类推。最终得到一个值，就是该函数的返回值。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "如果传入了init，那么init和seq[0]会作为第一次传入funciton的参数，如果seq为空，init也会作为reduce的返回值返回。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "用法示例如下："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "# coding:utf-8\n",
+    "\n",
+    "def main():\n",
+    "    lst = [1,2,3]\n",
+    "    f = lambda x,y:x*y\n",
+    "    print reduce(f,lst)\n",
+    "    # 输出：6\n",
+    "\n",
+    "    print reduce(f,lst,-1)\n",
+    "    # 输出：-6\n",
+    "\n",
+    "    print reduce(f,[],-2)\n",
+    "    # 输出：-2\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# base64编解码"
    ]
   },
