add usage of else

--- a/useful-func/python-tricks.ipynb
+++ b/useful-func/python-tricks.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python奇技淫巧大全"
+    "# Python技巧大全"
    ]
   },
   {
@@ -380,6 +380,145 @@
    "metadata": {},
    "source": [
     "用with语句上下文管理器可以自动地管理文件的打开、关闭，不需手工干预。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# else，不止是else"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 普通用法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "small\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = -1\n",
+    "if a > 0:\n",
+    "    print 'big'\n",
+    "else:\n",
+    "    print 'small'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 循环语句搭配else"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "判断一个数是否是素数："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97 is a prime!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "n = 97\n",
+    "for i in range(2,int(math.sqrt(n) + 2)):\n",
+    "    if n % i == 0:\n",
+    "        print '{0} is not a prime!'.format(n)\n",
+    "        break\n",
+    "else:\n",
+    "    print '{0} is a prime!'.format(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可见，如果循环中有break语句，且直到循环结束都没有执行过break语句，那么就会继续走后面的else分支。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 异常处理搭配else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "integer division or modulo by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print 1/0\n",
+    "except Exception as msg:\n",
+    "    print str(msg)\n",
+    "else:\n",
+    "    print 'all is OK!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "all is OK!\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    print 1/1\n",
+    "except Exception as msg:\n",
+    "    print str(msg)\n",
+    "else:\n",
+    "    print 'all is OK!'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可见，如果没有发生异常，就会走else分支。"
    ]
   }
  ],
